#40 Their was a bug causing the height of the outer container to be set to heigh causing the scrollbar to 'disappear' .. fixed by setting the height of the outer container to 100% (of the outer-outer container).

--- a/editor/static/css/CodeMirror.css
+++ b/editor/static/css/CodeMirror.css
@@ -1,3 +1,7 @@
+.CodeMirror {
+    height: 100%;
+}
+
 .CodeMirror .CodeMirror-scroll {
     height: 100%;
 }
